--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 html { background: #574926; }
-body { background: #dbd3bf; width: 0 auto;height:0 auto; margin: 0 auto; padding: 0 auto;
+body { background: #dbd3bf; width: 100%; margin: 0 auto; padding: 0 auto;
 
-  font-family: 'Chelsea Market', cursive;line-height: 0 auto; margin: 0 auto; font-size: 16px;}
-  
+ font-family: 'Chelsea Market', cursive;line-height: 0 auto; margin: 0 auto; font-size: 16px; 
+    }
 
 nav.main {
   background: #574926;
@@ -49,42 +49,39 @@ nav.main a {
   text-align: center; 
  }
 
+
+
 nav.section1 img{
   width:100%;
   heigth:50%;
   border-bottom: 0;
   margin: 0 auto;
   border-radius: 0;
-  
   }
-
 
 nav.section2 img{
   width:50%;
-  heigth:25%;
+  heigth:0 auto;
   float: left;
   padding: 0 auto;
   margin: 0 auto;
  
   
-} 
-
+  
+}
 
 footer {
   overflow: auto;
   background: lightgray;
   padding: 0.5em;
- 
 }
 
 footer .copyright {
   float: left;
-     
 }
 
 footer nav {
   float: right;
-  
 }
 
 footer nav ul {
@@ -105,5 +102,4 @@ footer nav li a {
 
 footer nav li a:hover {
   color: darkgray;
-  
 }
