--- a/style.css
+++ b/style.css
@@ -1,22 +1,16 @@
 html { background: #574926; }
-body { background: #dbd3bf; width: 100%; margin: 0 auto; padding: 0 auto;
+body { background: #dbd3bf; width: 100%;
 
- font-family: 'Chelsea Market', cursive;line-height: 0 auto; margin: 0 auto; font-size: 16px; 
+   font-family: 'Chelsea Market', cursive;line-height: 0 auto; margin: 0 auto; font-size: 18px; 
     }
 
 nav.main {
   background: #574926;
   width:100%;
-  height:45px;
+  height:70px;
   align: center;
   }
 
-  nav.main img {
-  padding: 0 auto ;
-  margin: 0 auto;
-  image-align: center;
-    
-  }
 
 
 nav.main ul {
@@ -25,6 +19,7 @@ nav.main ul {
   padding: 0 auto;
   overflow: auto;
   text-align: center;
+  line-height: 70px;
   
   
 }
@@ -34,14 +29,14 @@ nav.main li {
   text-align: center;
   margin: 0 auto;
   padding: 0 auto;
-  line-height: 45px;
+  line-height: 70px;
  
   
 }
 nav.main a {
-  padding:0;
+  padding:0 40px;
   margin: 0 auto;
-  line-height: 0 auto;
+  line-height: 70px;
   width:100%;
   display: inline-block;  
   color: #dbd3bf;
@@ -49,15 +44,24 @@ nav.main a {
   text-align: center; 
  }
 
+nav.main a:hover {
+  color: darkgreen;
+}
 
+.imgContainer { 
+    font-size: 0px ; 
+    white-space: nowrap; 
+}
 
 nav.section1 img{
   width:100%;
-  heigth:50%;
+  heigth:0 auto;
   border-bottom: 0;
   margin: 0 auto;
   border-radius: 0;
+  
   }
+
 
 nav.section2 img{
   width:50%;
@@ -70,10 +74,13 @@ nav.section2 img{
   
 }
 
+
+
 footer {
   overflow: auto;
-  background: lightgray;
+  background: #dbd3bf;
   padding: 0.5em;
+  
 }
 
 footer .copyright {
@@ -95,11 +102,11 @@ footer nav li {
 
 footer nav li a {
   display: inline-block;
-  padding-left: 1.5em;
+  padding-left: 3em;
   text-decoration: none;
-  color: gray;
+  color: #574926;
 }
 
 footer nav li a:hover {
-  color: darkgray;
+  color: darkgreen;
 }
