--- a/contactinfo.css
+++ b/contactinfo.css
@@ -14,6 +14,7 @@ nav.main {
   background: #574926;
   width:100%;
   height:70px;
+  align: center;
   }
 
 
@@ -23,6 +24,7 @@ nav.main ul {
   margin: 0 auto;
   padding: 0 auto;
   overflow: auto;
+  text-align: center;
   line-height: 70px;
   
   
@@ -30,6 +32,7 @@ nav.main ul {
 nav.main li {
   float: left;
   width:10%;
+  text-align: center;
   margin: 0 auto;
   padding: 0 auto;
   line-height: 70px;
