--- a/style.css
+++ b/style.css
@@ -80,6 +80,23 @@ nav.section2 img{
   
 }
 
+.header {
+width : 100%;
+height: 200px;
+background: #dbd3bf;
+padding: 10px;
+}
+
+h4 {
+color:#574926;
+font-size: 50px;
+}
+
+.section3 {
+  width: 100%;
+  height: 800px;
+}
+
 
 
 footer {
@@ -88,6 +105,7 @@ footer {
   padding: 0.5em;
   
 }
+
 
 footer .copyright {
   float: left;
