--- a/map.css
+++ b/map.css
@@ -10,6 +10,8 @@ h2 {font-family: 'Chelsea Market', cursive;font-size: 35px; padding-left:80px; c
 
 h3 {font-family: 'Chelsea Market', cursive;line-height:1.5;font-size: 25px;padding-left:45px; color:#574926; }
 
+h4 {font-family: 'Chelsea Market', cursive;font-size: 50px; padding:0; color:#574926;}
+
 nav.main {
   background: #574926;
   width:100%;
@@ -87,10 +89,7 @@ background: #dbd3bf;
 padding: 10px;
 }
 
-h4 {
-color:#574926;
-font-size: 50px;
-}
+
 
 .section3 {
   width: 100%;
