--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ nav.main {
   width:100%;
   height:70px;
   align: center;
+  font-size: 22px;
+
   }
 
 
@@ -36,7 +38,7 @@ nav.main li {
   width:10%;
   text-align: center;
   margin: 0 auto;
-  padding: 0 auto;
+  padding: 2px 13px;
   line-height: 70px;
  
   
@@ -98,46 +100,6 @@ padding: 10px;
   marigin:0;
 padding:0;
 }
-
-
-
-footer {
-  overflow: auto;
-  background: #dbd3bf;
-  padding: 0.5em;
-  
-}
-
-
-footer .copyright {
-  float: left;
-}
-
-footer nav {
-  float: right;
-}
-
-footer nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-footer nav li {
-  float: left;
-}
-
-footer nav li a {
-  display: inline-block;
-  padding-left: 3em;
-  text-decoration: none;
-  color: #574926;
-}
-
-footer nav li a:hover {
-  color: darkgreen;
-}
-
-
 
 
 
