--- a/contact.css
+++ b/contact.css
@@ -1,14 +1,24 @@
 html { background: #574926; }
 body { background: #dbd3bf; width: 100%;
+  
+  
+  font-family: 'Chelsea Market', cursive;line-height: 0 auto; margin: 0 auto; font-size: 16px;}
+  
+ h1 {font-family: 'Chelsea Market', cursive;line-height:.5;font-size: 100px; padding-left:70px; color:#574926; }
 
-   font-family: 'Chelsea Market', cursive;line-height: 0 auto; margin: 0 auto; font-size: 16px; 
-    }
+h2 {font-family: 'Chelsea Market', cursive;font-size: 35px; padding-left:80px; color:#574926; }
+
+h3 {font-family: 'Chelsea Market', cursive;line-height:1.5;font-size: 25px;padding-left:45px; color:#574926; }
+
+h4 {font-family: 'Chelsea Market', cursive;font-size: 50px; padding:0; color:#574926;}
 
 nav.main {
   background: #574926;
   width:100%;
   height:70px;
   align: center;
+  font-size: 22px;
+
   }
 
 
@@ -28,7 +38,7 @@ nav.main li {
   width:10%;
   text-align: center;
   margin: 0 auto;
-  padding: 0 auto;
+  padding: 2px 13px;
   line-height: 70px;
  
   
@@ -75,13 +85,31 @@ nav.section2 img{
 }
 
 
+.header {
+width : auto;
+height: 200px;
+background: #dbd3bf;
+padding: 10px;
+}
+
+
+
+.section3 {
+  windows: auto;
+  height: 1100px;
+  marigin:0;
+padding:0;
+}
+
+
 
 footer {
   overflow: auto;
-  background: #dbd3bf;
+  background: #574926;
   padding: 0.5em;
   
 }
+
 
 footer .copyright {
   float: left;
@@ -104,7 +132,7 @@ footer nav li a {
   display: inline-block;
   padding-left: 3em;
   text-decoration: none;
-  color: #574926;
+  color: #dbd3bf;
 }
 
 footer nav li a:hover {
