--- a/style.css
+++ b/style.css
@@ -1,16 +1,9 @@
 html { background: #574926; }
-body { background: #dbd3bf; width: 100%; text-align:center;
+body { background: #dbd3bf; width: 100%; 
+       font-family: sans-serif;
+}
   
-  
-  font-family: 'Chelsea Market', cursive;line-height: 0 auto; margin: 0 auto; font-size: 16px;}
-  
- h1 {font-family: 'Chelsea Market', cursive;line-height:.5;font-size: 70px; padding-left:70px; color:#574926; }
 
-h2 {font-family: 'Chelsea Market', cursive;font-size: 40px; padding-left:80px; color:#574926; }
-
-h3 {font-family: 'Chelsea Market', cursive;line-height:1.5;font-size: 25px;padding-left:45px; color:#574926; }
-
-h4 {font-family: 'Chelsea Market', cursive;font-size: 50px; padding:0; color:#574926;}
 
 nav.main {
   background: #574926;
@@ -75,7 +68,7 @@ nav.section1 img{
 
 nav.section2 img{
   width:50%;
-  heigth:0 auto;
+  height:0 auto;
   float: left;
   padding: 0 auto;
   margin: 0 auto;
@@ -95,71 +88,10 @@ padding: 10px;
 
 
 .section3 {
-  windows: 0 auto;
+  windows: auto;
   height: 1100px;
   marigin:0;
 padding:0;
-}
-
-div.contact-feedback {  
-  margin-top:150px;
-  margin-bottom:150px;
-  text-transform: uppercase;
-  transition:all 4s ease-in-out;
-    
-}
-
-
-.form-control {
-  
-  width: 600px;
-  background: transparent;
-  border: none;
-  outline: none;
-  border-bottom: 2px solid #574926;
-  font-size: 25px;
-  margin-bottom: 30px;
-  
-}
-
-input{
-  
-  height: 50px;
-}
-
-form .submit{
-  
-  background-color: #B9C3AA;
-  border-color: transparent;
-  font-size: 25px;
-  font-weight: bold;
-  letter-spacing: 2px;
-  height: 70px;
-  margin-top: 40px;
-}
-
-form .submit:hover {
-  color:#fff;
-  cursor: pointer;
-  
-  
-}
-
-
-div.contact-info{
-  
-  margin-top:100px; 
-}
-
-
-div.contact-info a {
-  text-decoration: none;
-  color: #574926;
-}
-
-div.contact-info a:hover{
-  
-  color: #fff;
 }
 
 
